--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 .idea/
-AlphaGallery/AlphaGallery.iml
 test/
-AlphaGallery/target
-AlphaGallery/src/test
+target/
+RESTful-Photo-Gallery.iml
