--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>AlphaGallery</groupId>
-    <artifactId>AlphaGallery</artifactId>
+    <groupId>Photo-Gallery</groupId>
+    <artifactId>Photo-Gallery</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
-    <name>Alpha Gallery</name>
+    <name>Photo Gallery</name>
 
     <properties>
-        <project.build.finalName>AlphaGallery</project.build.finalName>
+        <project.build.finalName>PhotoGallery</project.build.finalName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
         <check.style.plugin.version>2.7</check.style.plugin.version>
         <compiler.plugin.version>2.3.2</compiler.plugin.version>
         <war.plugin.version>2.4</war.plugin.version>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
