--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <project.build.finalName>PhotoGallery</project.build.finalName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
+        <thymeleaf.version>2.1.2.RELEASE</thymeleaf.version>
+        <bootstrap.version>3.2.0</bootstrap.version>
+        <jquery.version>2.1.1</jquery.version>
         <check.style.plugin.version>2.7</check.style.plugin.version>
         <compiler.plugin.version>2.3.2</compiler.plugin.version>
         <war.plugin.version>2.4</war.plugin.version>
@@ -35,9 +38,31 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring.boot.version}</version>
             <optional>true</optional>
+        </dependency>
+        <!--THYMELEAF SPRING-->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+        <!--WEB JARS-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${bootstrap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>${jquery.version}</version>
         </dependency>
     </dependencies>
 
