--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,9 @@
     <properties>
         <project.build.finalName>PhotoGallery</project.build.finalName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
         <thymeleaf.version>2.1.2.RELEASE</thymeleaf.version>
-        <bootstrap.version>3.2.0</bootstrap.version>
-        <jquery.version>2.1.1</jquery.version>
+        <commons.version>2.4</commons.version>
         <check.style.plugin.version>2.7</check.style.plugin.version>
-        <compiler.plugin.version>2.3.2</compiler.plugin.version>
-        <war.plugin.version>2.4</war.plugin.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -54,16 +50,11 @@
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
         </dependency>
-        <!--WEB JARS-->
+        <!--APACHE COMMONS IO-->
         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>${bootstrap.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-            <version>${jquery.version}</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.version}</version>
         </dependency>
     </dependencies>
 
@@ -73,7 +64,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring.boot.version}</version>
                 <configuration>
                     <addResources>true</addResources>
                 </configuration>
@@ -85,7 +75,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${check.style.plugin.version}</version>
@@ -104,11 +94,10 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${compiler.plugin.version}</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <source>${java.version}</source>
@@ -118,7 +107,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${war.plugin.version}</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
