--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache: false
 server.tomcat.basedir: target/tomcat
+
+# File size limit
+multipart.maxFileSize = 10Mb
+
+# Total request size for a multipart/form-data
+multipart.maxRequestSize = 10Mb
