--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <thymeleaf.version>2.1.2.RELEASE</thymeleaf.version>
         <commons.version>2.4</commons.version>
-        <check.style.plugin.version>2.7</check.style.plugin.version>
         <java.version>1.8</java.version>
+        <check.style.plugin.version>2.7</check.style.plugin.version>
         <jacoco.plugin.version>0.7.4.201502262128</jacoco.plugin.version>
     </properties>
 
@@ -78,8 +78,18 @@
         <finalName>${project.build.finalName}</finalName>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.3.6.RELEASE</version>
                 <configuration>
                     <addResources>true</addResources>
                 </configuration>
@@ -113,16 +123,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.2.0</version>
@@ -154,7 +154,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--NO WEB.XML CONFIGURATION-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
