--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ sudo: false # faster builds
 jdk:
   - oraclejdk8
 
-script: mvn clean install
-
-after_success:
-  - mvn clean test jacoco:report coveralls:report
+script: ./gradlew build
