--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,6 @@ apply plugin: 'spring-boot'
 group 'Photo-Gallery'
 version '1.0-SNAPSHOT'
 
-ext {
-    commonsVersion = '2.4'
-    jacocoVersion = '0.7.4.201502262128'
-    checkstyleVersion = '6.16.1'
-    bootstrapVersion = '3.3.7'
-}
-
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -40,8 +33,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-devtools"
     compile "org.springframework.boot:spring-boot-starter-hateoas"
 
-    compile "commons-io:commons-io:${commonsVersion}"
-    compile "org.webjars.bower:bootstrap:${bootstrapVersion}"
+    compile "commons-io:commons-io:2.4"
+    compile "org.webjars.bower:bootstrap:3.3.7"
 
     compile "org.springframework.boot:spring-boot-starter-test"
 }
